Update index.html with broadcast schedule from akisamp.html

--- a/index.html
+++ b/index.html
@@ -1059,34 +1059,109 @@
 <div class="macListe" id="football" style="display: none;">
 
 #akisbaslangic
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinnbatv">
+    <span class="saat"> 03:00</span>
+    <span class="takimlar">Philadelphia - Boston</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinss">
+    <span class="saat"> 03:30</span>
+    <span class="takimlar">New York - San Antonio</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
+    <span class="saat"> 18:30</span>
+    <span class="takimlar">FC Astana - Ballkani</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayintrtspor">
+    <span class="saat"> 18:30</span>
+    <span class="takimlar">Türkiye (K) - Slovakya (K)</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinss2">
+    <span class="saat"> 20:30</span>
+    <span class="takimlar">Anadolu Efes - Zalgiris</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
+    <span class="saat"> 20:45</span>
+    <span class="takimlar">Nordsjaelland - Spartak Trnava</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayintv85">
+    <span class="saat"> 20:45</span>
+    <span class="takimlar">Ajax - Brighton</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
+    <span class="saat"> 20:45</span>
+    <span class="takimlar">Beşiktaş - Bodo/Glimt</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
+    <span class="saat"> 20:45</span>
+    <span class="takimlar">Toulouse - Liverpool</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
+    <span class="saat"> 20:45</span>
+    <span class="takimlar">Rennes - Panathinaikos</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
+    <span class="saat"> 20:45</span>
+    <span class="takimlar">Slavia Prag - Roma</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
+    <span class="saat"> 20:45</span>
+    <span class="takimlar">Karabağ - Leverkusen</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinss">
+    <span class="saat"> 22:30</span>
+    <span class="takimlar">Partizan - Fenerbahçe Beko</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinss2">
+    <span class="saat"> 22:45</span>
+    <span class="takimlar">Real Madrid - Bologna</span>
+    <span class="lig">STSL</span>
+</div>
 <div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
     <span class="saat"> 23:00</span>
-    <span class="takimlar">Salzburg - Inter</span>
+    <span class="takimlar">Club Brugge - Lugano</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayintv85">
     <span class="saat"> 23:00</span>
-    <span class="takimlar">Real Madrid - Braga</span>
+    <span class="takimlar">Aston Villa - AZ Alkmaar</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
     <span class="saat"> 23:00</span>
-    <span class="takimlar">Bayern Münih - Galatasaray</span>
+    <span class="takimlar">Ludogorets - Fenerbahçe</span>
     <span class="lig">STSL</span>
 </div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinex2">
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
     <span class="saat"> 23:00</span>
-    <span class="takimlar">Copenhagen - Man Utd</span>
+    <span class="takimlar">West Ham - Olympiakos</span>
     <span class="lig">STSL</span>
 </div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinex3">
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
     <span class="saat"> 23:00</span>
-    <span class="takimlar">Arsenal - Sevilla</span>
+    <span class="takimlar">AEK Atina - Marsilya</span>
     <span class="lig">STSL</span>
 </div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinex4">
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
     <span class="saat"> 23:00</span>
-    <span class="takimlar">PSV Eindhoven - Lens</span>
+    <span class="takimlar">Atalanta - Sturm Graz</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
+    <span class="saat"> 23:00</span>
+    <span class="takimlar">S.Bratislava - Lille</span>
     <span class="lig">STSL</span>
 </div>
 
