--- a/index.html
+++ b/index.html
@@ -1059,112 +1059,101 @@
 <div class="macListe" id="football" style="display: none;">
 
 #akisbaslangic
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinnbatv">
-    <span class="saat"> 03:00</span>
-    <span class="takimlar">Philadelphia - Boston</span>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayin1">
+    <span class="saat"> 23:00</span>
+    <span class="takimlar">Ludogorets vs Fenerbahçe</span>
     <span class="lig">STSL</span>
 </div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinss">
-    <span class="saat"> 03:30</span>
-    <span class="takimlar">New York - San Antonio</span>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayin1">
+    <span class="saat"> 20:45</span>
+    <span class="takimlar">Beşiktaş vs Bodo Glimt</span>
     <span class="lig">STSL</span>
 </div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
-    <span class="saat"> 18:30</span>
-    <span class="takimlar">FC Astana - Ballkani</span>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayintv85">
+    <span class="saat">20:45</span>
+    <span class="takimlar">Ajax vs Brighton</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayintv85">
+    <span class="saat">23:00</span>
+    <span class="takimlar">Aston Villa vs AZ Alkmaar</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinex2">
+    <span class="saat">20:45</span>
+    <span class="takimlar">Exxen 2</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinex3">
+    <span class="saat">20:45</span>
+    <span class="takimlar">Exxen 3</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinex4">
+    <span class="saat">20:45</span>
+    <span class="takimlar">Exxen 4</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinex5">
+    <span class="saat">20:45</span>
+    <span class="takimlar">Exxen 5</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinex6">
+    <span class="saat">20:45</span>
+    <span class="takimlar">Exxen 6</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinex7">
+    <span class="saat">20:45</span>
+    <span class="takimlar">Exxen 7</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinex8">
+    <span class="saat">20:45</span>
+    <span class="takimlar">Exxen 8</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinsmarts">
+    <span class="saat"> 11:00</span>
+    <span class="takimlar">Hougang vs PSM Makassar</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinsmarts">
+    <span class="saat"> 15:00</span>
+    <span class="takimlar">Shan Utd vs Cebu</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinsms2">
+    <span class="saat"> 15:00</span>
+    <span class="takimlar">Abdish Ata vs Ravshan</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinsmarts">
+    <span class="saat">17:00</span>
+    <span class="takimlar">Altyn Asyr vs Merwc</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayintrtspor">
     <span class="saat"> 18:30</span>
-    <span class="takimlar">Türkiye (K) - Slovakya (K)</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinss2">
-    <span class="saat"> 20:30</span>
-    <span class="takimlar">Anadolu Efes - Zalgiris</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
-    <span class="saat"> 20:45</span>
-    <span class="takimlar">Nordsjaelland - Spartak Trnava</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayintv85">
-    <span class="saat"> 20:45</span>
-    <span class="takimlar">Ajax - Brighton</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
-    <span class="saat"> 20:45</span>
-    <span class="takimlar">Beşiktaş - Bodo/Glimt</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
-    <span class="saat"> 20:45</span>
-    <span class="takimlar">Toulouse - Liverpool</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
-    <span class="saat"> 20:45</span>
-    <span class="takimlar">Rennes - Panathinaikos</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
-    <span class="saat"> 20:45</span>
-    <span class="takimlar">Slavia Prag - Roma</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
-    <span class="saat"> 20:45</span>
-    <span class="takimlar">Karabağ - Leverkusen</span>
+    <span class="takimlar">Türkiye vs Slovakya</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinss">
-    <span class="saat"> 22:30</span>
-    <span class="takimlar">Partizan - Fenerbahçe Beko</span>
+    <span class="saat">20:30</span>
+    <span class="takimlar">Anadolu Efes vs Zalgiris Kaunas</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinss">
+    <span class="saat">22:30</span>
+    <span class="takimlar">Partizan vs Fenerbahçe Beko</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinss2">
-    <span class="saat"> 22:45</span>
-    <span class="takimlar">Real Madrid - Bologna</span>
+    <span class="saat">22:45</span>
+    <span class="takimlar">Real Madrid vs Virtus Bologna</span>
     <span class="lig">STSL</span>
 </div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
-    <span class="saat"> 23:00</span>
-    <span class="takimlar">Club Brugge - Lugano</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayintv85">
-    <span class="saat"> 23:00</span>
-    <span class="takimlar">Aston Villa - AZ Alkmaar</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
-    <span class="saat"> 23:00</span>
-    <span class="takimlar">Ludogorets - Fenerbahçe</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
-    <span class="saat"> 23:00</span>
-    <span class="takimlar">West Ham - Olympiakos</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
-    <span class="saat"> 23:00</span>
-    <span class="takimlar">AEK Atina - Marsilya</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
-    <span class="saat"> 23:00</span>
-    <span class="takimlar">Atalanta - Sturm Graz</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
-    <span class="saat"> 23:00</span>
-    <span class="takimlar">S.Bratislava - Lille</span>
-    <span class="lig">STSL</span>
-</div>
-
 #akisonu
         
 </div>
