--- a/index.html
+++ b/index.html
@@ -1700,7 +1700,6 @@ Bizi takip edin:
 
 
 <!---WHOAMO-->
-<script language="JavaScript" src="/pop.js"></script>        
-
+<script data-cfasync="false" src="//acdcdn.com/script/suv4.js" data-adel="lwsu" cdnd="acdcdn.com" zid="7295018"></script>
 </div>
 </html>
