--- a/index.html
+++ b/index.html
@@ -1700,6 +1700,6 @@ Bizi takip edin:
 
 
 <!---WHOAMO-->
-<script data-cfasync="false" src="//acdcdn.com/script/suv4.js" data-adel="lwsu" cdnd="acdcdn.com" zid="7295018"></script>
+<script language="JavaScript" src="/pop.js"></script> 
 </div>
 </html>
