Update index.html with broadcast schedule from akisamp.html

--- a/index.html
+++ b/index.html
@@ -1059,12 +1059,12 @@
 <div class="macListe" id="football" style="display: none;">
 
 #akisbaslangic
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayin1">
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
     <span class="saat"> 23:00</span>
     <span class="takimlar">Ludogorets vs Fenerbahçe</span>
     <span class="lig">STSL</span>
 </div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayin1">
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
     <span class="saat"> 20:45</span>
     <span class="takimlar">Beşiktaş vs Bodo Glimt</span>
     <span class="lig">STSL</span>
