--- a/index.html
+++ b/index.html
@@ -1059,101 +1059,97 @@
 <div class="macListe" id="football" style="display: none;">
 
 #akisbaslangic
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
-    <span class="saat"> 23:00</span>
-    <span class="takimlar">Ludogorets vs Fenerbahçe</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
-    <span class="saat"> 20:45</span>
-    <span class="takimlar">Beşiktaş vs Bodo Glimt</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayintv85">
-    <span class="saat">20:45</span>
-    <span class="takimlar">Ajax vs Brighton</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayintv85">
-    <span class="saat">23:00</span>
-    <span class="takimlar">Aston Villa vs AZ Alkmaar</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinex2">
-    <span class="saat">20:45</span>
-    <span class="takimlar">Exxen 2</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinex3">
-    <span class="saat">20:45</span>
-    <span class="takimlar">Exxen 3</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinex4">
-    <span class="saat">20:45</span>
-    <span class="takimlar">Exxen 4</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinex5">
-    <span class="saat">20:45</span>
-    <span class="takimlar">Exxen 5</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinex6">
-    <span class="saat">20:45</span>
-    <span class="takimlar">Exxen 6</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinex7">
-    <span class="saat">20:45</span>
-    <span class="takimlar">Exxen 7</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinex8">
-    <span class="saat">20:45</span>
-    <span class="takimlar">Exxen 8</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinsmarts">
-    <span class="saat"> 11:00</span>
-    <span class="takimlar">Hougang vs PSM Makassar</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinsmarts">
-    <span class="saat"> 15:00</span>
-    <span class="takimlar">Shan Utd vs Cebu</span>
-    <span class="lig">STSL</span>
-</div>
 <div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinsms2">
-    <span class="saat"> 15:00</span>
-    <span class="takimlar">Abdish Ata vs Ravshan</span>
+    <span class="saat"> 01:00</span>
+    <span class="takimlar">Corinthians - Atl Mineiro</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinsmarts">
-    <span class="saat">17:00</span>
-    <span class="takimlar">Altyn Asyr vs Merwc</span>
+    <span class="saat"> 02:00</span>
+    <span class="takimlar">Botafogo - Gremio</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinss">
+    <span class="saat"> 03:00</span>
+    <span class="takimlar">Indiana - Milwaukee</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayintrtspor2">
+    <span class="saat"> 18:00</span>
+    <span class="takimlar">Harem Spor - Gaziantep</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayintv85">
+    <span class="saat"> 18:00</span>
+    <span class="takimlar">Al Hilal Riyadh - Al Taawon</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinstar">
+    <span class="saat"> 20:00</span>
+    <span class="takimlar">Trabzonspor - Konyaspor</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayintrtspor">
-    <span class="saat"> 18:30</span>
-    <span class="takimlar">Türkiye vs Slovakya</span>
+    <span class="saat"> 20:00</span>
+    <span class="takimlar">Adanaspor - Gençlerbirliği</span>
     <span class="lig">STSL</span>
 </div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinss">
-    <span class="saat">20:30</span>
-    <span class="takimlar">Anadolu Efes vs Zalgiris Kaunas</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinss">
-    <span class="saat">22:30</span>
-    <span class="takimlar">Partizan vs Fenerbahçe Beko</span>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinb2">
+    <span class="saat"> 20:00</span>
+    <span class="takimlar">Ankaragücü - Antalyaspor</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinss2">
-    <span class="saat">22:45</span>
-    <span class="takimlar">Real Madrid vs Virtus Bologna</span>
+    <span class="saat"> 20:30</span>
+    <span class="takimlar">Sassuolo - Salernitana</span>
     <span class="lig">STSL</span>
 </div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayint2">
+    <span class="saat"> 20:30</span>
+    <span class="takimlar">St.Pauli - Hannover 96</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayint3">
+    <span class="saat"> 20:30</span>
+    <span class="takimlar">Schalke 04 - Elversberg</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayintv85">
+    <span class="saat"> 21:00</span>
+    <span class="takimlar">Al Ittihad - Abha</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinss">
+    <span class="saat"> 22:00</span>
+    <span class="takimlar">ALBA Berlin - Panathinaikos</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayint1">
+    <span class="saat"> 22:30</span>
+    <span class="takimlar">M gladbach - Wolfsburg</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinss2">
+    <span class="saat"> 22:30</span>
+    <span class="takimlar">Barcelona - Kızılyıldız</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayint2">
+    <span class="saat"> 22:45</span>
+    <span class="takimlar">Genoa - Hellas Verona</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayint3">
+    <span class="saat"> 23:00</span>
+    <span class="takimlar">Athletic Bilbao - Celta Vigo</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//fram8.pages.dev/channel.html?id=yayinb3">
+    <span class="saat"> 23:00</span>
+    <span class="takimlar">Montpellier - Nice</span>
+    <span class="lig">STSL</span>
+</div>
+
 #akisonu
         
 </div>
