--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta http-equiv="Refresh" content="1; url='https://twitter.com/taraftarium24x/'" />
+<meta http-equiv="Refresh" content="1; url='https://google.com'" />
 </head>
 Loading...
 </html>
